--- a/PYTHON/logging.yaml
+++ b/PYTHON/logging.yaml
@@ -1,29 +1,31 @@
 version: 1
 disable_existing_loggers: False
 formatters:
-    simple:
-        format: "%(asctime)s - %(name)s - %(levelname)s - %(message)s"
+    custom:
+        format: '[%(asctime)s][%(names)s][%(levelname)s] %(message)s'
+        #datefmt: '%d-%b-%Y %r %Z'
 
 handlers:
     console:
         class: logging.StreamHandler
         level: DEBUG
-        formatter: simple
+        formatter: custom
         stream: ext://sys.stdout
 
-    file_handler:
+    file:
         class: logging.FileHandler
-        level: INFO
-        formatter: simple
-        filename: !filename
+        level: DEBUG
+        formatter: custom
+        filename: !logfilename
+        mode: 'w'
         encoding: utf8
-       	backupCount: 10
+
 loggers:
-    NEWAPP:
-        level: INFO
-        handlers: [file_handler]
+    newapp:
+        level: !loglevel
+        handlers: [file]
         propagate: no
 
 root:
-    level: DEBUG
-    handlers: [console, file_handler]
+    level: !loglevel
+    handlers: [file]
